# Semantic-Reasoning-Agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENTS_ontology_architecture.md  API_REPORT.md  API_USAGE.md  BE architecture.md  CLAUDE.md  README.md  api_test_results.json  backend_flow.md  docker-compose.yml  frontend_upgrade_spec.md  package-lock.json  prompt.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.pytest_tmp/pytest-of-Admin/pytest-0/test_upgrade_rejects_unversion0/: legacy.db
.pytest_tmp/test_baseline_schema_matches_s0/: baseline.db
apps/: README.md
apps/backend/: Dockerfile  README.md  alembic.ini  entrypoint.sh  migrate.sh  migrate_document_chunks_to_qdrant.py  run_migrations.py  serve.py  worker-entrypoint.sh
apps/backend/alembic/: env.py  script.py.mako  sqlite_portable.py
apps/backend/alembic/versions/: 20260418_init_conversation_workspace_columns.py  20260420_add_ontology_type_definition_tables.py  20260421_add_agent_tools_and_ontology_model_fields.py  20260421_add_document_ingestion_options.py  20260421_add_document_storage_and_extraction_tables.py  20260421_add_ontology_build_model_override.py  (+16 more)
apps/backend/tests/: conftest.py  test_agent_capabilities_api.py  test_alembic_baseline.py  test_api.py  test_knowledge_packs_api.py  test_model_save_regressions.py  test_ontology_llm_extractor.py  test_phase2_api.py  test_phase3_api.py  test_search_tools_api.py  test_task_runtime_api.py  test_task_runtime_service.py  test_task_workflow_api.py  test_tool_invoke_integration.py  test_tools_api.py
apps/backend/worker/: README.md  serve-DESKTOP-IVMG38U.py  serve.py
apps/frontend/: .env.example  .eslintrc.json  Dockerfile  README.md  components.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/frontend/app/: layout.tsx  page.tsx
apps/frontend/scripts/: check-i18n-coverage.ts
apps/frontend/src/: globals.css  layout.tsx  providers.tsx
apps/worker-celery/: README.md
docs/: INGEST_ARCHITECTURE.md
docs/api/: phase-1-contract.md  phase-2-contract.md  phase-3-contract.md
docs/architecture/: phase-1-prep.md  phase-2-start.md  phase-3-start.md  query-runtime-improvements.md  system-flow.md
docs/backend/: persistence_orm_audit.md
docs/product/: README.md
docs/runbooks/: local-setup.md
infrastructure/: docker-compose.yml
infrastructure/docker/: docker-compose.yml
test_doc/: Newsletter Report.docx  VỊ TRÍ PHÒNG MÁY  THANG MÁY.xlsx  sample_buildings.csv
(+480 files in other folders)
