[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-reasoning-agent"
version = "0.1.0"
description = "Backend-first Phase 1 preparation for the Semantic Reasoning Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.52.0,<1.0.0",
  "celery>=5.4.0,<6.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "neo4j>=5.25.0,<6.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pypdf>=5.4.0,<6.0.0",
  "redis>=5.2.0,<6.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "python-docx>=1.1.2,<2.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "reportlab>=4.4.0,<5.0.0",
  "ruff>=0.7.0,<1.0.0",
]

[tool.setuptools]
package-dir = {"" = "apps/backend/src"}

[tool.setuptools.packages.find]
where = ["apps/backend/src"]

[tool.pytest.ini_options]
testpaths = ["apps/backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
