[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-reasoning-agent"
version = "0.1.0"
description = "Backend-first Phase 1 preparation for the Semantic Reasoning Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.13.5,<4.0.0",
  "alembic>=1.18.4,<2.0.0",
  "anthropic>=0.96.0,<1.0.0",
  "celery>=5.6.3,<7.0.0",
  "fastapi>=0.136.0,<1.0.0",
  "google-genai>=1.73.0,<2.0.0",
  "httpx>=0.28.1,<1.0.0",
  "neo4j>=6.1.0,<7.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "openai>=2.32.0,<3.0.0",
  "psycopg[binary]>=3.3.3,<4.0.0",
  "pypdf>=6.10.2,<7.0.0",
  "redis>=7.4.0,<8.0.0",
  "pydantic-settings>=2.13.1,<3.0.0",
  "python-docx>=1.2.0,<2.0.0",
  "python-multipart>=0.0.26,<1.0.0",
  "sqlalchemy>=2.0.49,<3.0.0",
  "uvicorn>=0.44.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0.0",
  "reportlab>=4.4.10,<5.0.0",
  "ruff>=0.15.11,<1.0.0",
]

[tool.setuptools]
package-dir = {"" = "apps/backend/src"}

[tool.setuptools.package-data]
semantic_reasoning_agent = [
  "skills/README.md",
  "skills/*/SKILL.md",
]

[tool.setuptools.packages.find]
where = ["apps/backend/src"]

[tool.pytest.ini_options]
testpaths = ["apps/backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
